fixed scoreboard z-index

--- a/src/css/frame/scoreboard.css
+++ b/src/css/frame/scoreboard.css
@@ -101,3 +101,11 @@
 .noj-frame#frameScoreBoard tbody > tr{
     height: calc(36px + 1.5rem);
 }
+
+.noj-frame#frameScoreBoard .noj-alert-container{
+    position: absolute;
+    top:0;
+    bottom:0;
+    right:0;
+    left:0;
+}
